[package]
name = "letitrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.11.26"}
rustdns = "0.4.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
url = "2.5.0"
